links to md files

--- a/md/20130723-1.md
+++ b/md/20130723-1.md
@@ -1,4 +1,4 @@
-﻿##The Guy with the Eyes
+﻿##Chronic Review - The Guy with the Eyes
 
 Tuesday Afternoon Examination: The Chronic known as "The Guy with the Eyes".
 
