--- a/md/20130724-2.md
+++ b/md/20130724-2.md
@@ -1,4 +1,4 @@
-﻿##The Fanny Pack
+﻿##Chronic Review - The Fanny Pack Guy
 
 Wednesday Afternoon Examination: The Chronic known as "The Fanny Pack" guy.
 
