--- a/md/20140217-2.md
+++ b/md/20140217-2.md
@@ -40,4 +40,6 @@ And not long after that, Neil announced he was leaving.
 
 Next, Part 3 – Neil's waning days, the slow painful death of WIOD and the start of the SuperTalk Radio Network.
 
+_Part 3 was either never completed or recovered._
+
 AK 2/17/2014
