--- a/md/20130718.md
+++ b/md/20130718.md
@@ -1,6 +1,6 @@
 ﻿## WIOD Van Troubles?
 
-Ok.. since I owe people a story, here's another...July 18 at 3:28pm
+Ok.. since I owe people a story, here's another...
 
 Please keep in mind... Jorge has WAYYYY more Neil stories than I could possibly have. I worked in the building... with Randi, and Chris Baker, and Rick&Suds.. and the garden guy and Defo and Maddog and others part time.. I saw Neil every weekday between Aug 91 and the day he left the station and went to QAM... and wandered into the studio and talked with him during breaks and handled his remotes when I was in promotions. But I dont have the nitty-gritty down-and-dirty stuff that's probably really good reading and way more interesting...
 
