--- a/md/20130729.md
+++ b/md/20130729.md
@@ -1,6 +1,6 @@
-##Reineri on his own
+## Reineri on his own
 
-Monday Afternoon Bedtime Story: Reineri on his own. July 29 at 3:31pm
+Monday Afternoon Bedtime Story: Reineri on his own.
 
 I've never told this story, and I'm not proud of it at all. Many board-ops lost their jobs over things like this, but thankfully, and deviously i covered my tracks enough, or so I think, so that I didn't get fired on the spot.
 
