--- a/md/20130730.md
+++ b/md/20130730.md
@@ -38,6 +38,6 @@ The Garden Show ends. The news is on. The News ends. The "Sunday Morning Sportpa
 
 But Defo is Defo. And he does his show for 4 hours without sleep and with a handful of callers and a newspaper. And he's on a 20 minute tangent about Casablanca that starts regarding a bogus call by an umpire and ends it back at the Dolphins kicker. All seamlessly interwoven and without a pause.
 
-And me? I'm in the control room stuffing my gullet with 3 jelly donuts and a huge coffee, amused by calls and character and feeling sorry for the guy who's coming in after me to run Meg Green's show and the Best of Goldberg at Night. — with Jeff DeForrest.
+And me? I'm in the control room stuffing my gullet with 3 jelly donuts and a huge coffee, amused by calls and character and feeling sorry for the guy who's coming in after me to run Meg Green's show and the Best of Goldberg at Night.
 
 AK 7/30/2013
