--- a/md/20131215.md
+++ b/md/20131215.md
@@ -26,7 +26,7 @@ Every now and then, while shuffling things around down there in the freezer I’
 
 So… fast forward months and months later. Rick and Suds are in Morning Drive. I think by then Randi is gone, Marvin is gone, and Phil is on in afternoon drive. And it’s his birthday.
 
-From what I understand… again.. I wasn’t there for this part of the story… someone got Phil an icecream cake. And they’re having a difficult time getting it to fit in the freezer. As I’ve mentioned, the thing was never cleaned out.. so I’m sure that the process of trying to get a cake box to fit in there was like playing tetris on a grand scale. Old Tupperware lunches dating back to the Civil War, frozen TV dinners, Microwave lean cuisines, ice cream containers, and some round hard thing in a big black plastic bag. And someone opened the bag. And flipped. The fux. Out.
+From what I understand… again.. I wasn’t there for this part of the story… someone got Phil an ice cream cake. And they’re having a difficult time getting it to fit in the freezer. As I’ve mentioned, the thing was never cleaned out.. so I’m sure that the process of trying to get a cake box to fit in there was like playing Tetris on a grand scale. Old Tupperware lunches dating back to the Civil War, frozen TV dinners, Microwave lean cuisines, ice cream containers, and some round hard thing in a big black plastic bag. And someone opened the bag. And flipped. The fux. Out.
 
 Like crying and shrieking and hyperventilating. I don’t know if it was Mercy, the super nice, Spanish speaking, middle-aged overweight accounting-marm. Or Stephanie, the gravel voiced, scrappy traffic department manager. All I know is Jennifer Rehm, News Director and Anchor during Phil’s show, lost her mind.
 
