--- a/md/20130806.md
+++ b/md/20130806.md
@@ -1,4 +1,4 @@
-## Bryan Cox
+## Bryan Cox - I Hate WIOD
 
 Tuesday Morning Bedtime Story: "Suck my D_ck"
 
@@ -27,6 +27,10 @@ We tape everything from the games back then on big, hour long reel-to-reel machi
 And there, plain as day, I hear Maddog do his lead-in, and ask Bryan Cox if he's happy about the win.
 
 "I'm happy. I hate WIOD. Suck my d_ck, but I'm happy".
+
+## ![Bryan Cox](bryan-cox.jpg)
+
+[Bryan Cox is Happy - Neil's Nuggets 1996 - Track 1](https://youtu.be/CsTw28JUPcQ)
 
 And Maddog ignores it because he know's he's live on the air, and continues the interview. I don't know if Bryan knew we were live or not; not sure he would have cared.
 
